# CPlusPlusPlugin

./: CMakeLists.txt  README.txt
PluginCore/: CMakeLists.txt
PluginCore/include/: DynamicLib.h  Export.h  PluginInstance.h  PluginManager.h
PluginCore/src/: PluginManager.cpp
PluginShape/: CMakeLists.txt
PluginShape/src/: ShapePlugin.cpp
PluginTest/: CMakeLists.txt
PluginTest/src/: PluginTest.cpp
