PROJECT(PluginShape)

SET(BIN_NAME ${PROJECT_NAME})

SET(BIN_DIR ${PROJECT_SOURCE_DIR})

SET(BIN_HEADER_DIR ${BIN_DIR}/include)

ADD_DEFINITIONS(-DWIN32_LEAN_AND_MEAN)

INCLUDE_DIRECTORIES(${BIN_HEADER_DIR} ${PluginCore_INCLUDE})
LINK_DIRECTORIES(${PluginCore_LIB})

FILE(GLOB HEADER_FILES "include/*.h" )	
	
AUX_SOURCE_DIRECTORY(${BIN_DIR}/src SRC_FILES)

SOURCE_GROUP(Header\ File FILES ${HEADER})
SOURCE_GROUP(Source\ File FILES ${SRC})

ADD_LIBRARY(${BIN_NAME} SHARED ${HEADER_FILES} ${SRC_FILES})	
	
SET_TARGET_PROPERTIES(${BIN_NAME} PROPERTIES DEBUG_POSTFIX "d")
SET_TARGET_PROPERTIES( ${BIN_NAME} PROPERTIES FOLDER "Dll" )

TARGET_LINK_LIBRARIES(${BIN_NAME}
	debug PluginCored.lib          optimized PluginCore.lib
	)	
